# multi-format-mesh-converter

./: .gitignore  Cargo.toml  License  README.md
rsc/: shapes.mtl  shapes.smd
src/: geometry.rs  lib.rs  main.rs  studiomdl_data.rs  util.rs  wavefront_obj.rs
