[package]
name = "multimesh"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
nom = { version = "7.1.3", optional = true }
tobj = { version = "4.0.0", optional = true }
zip = { version = "0.6.6", optional = true }
indexmap = { version = "2.0.0", optional = true }

[features]
default = ["wavefront-obj", "studiomdl-data"]
wavefront-obj = ["tobj", "zip", "indexmap"]
studiomdl-data = ["nom", "indexmap"]